maze.lessons.maze.pledge.PledgeMaze.scala.error
Escaper:9: error: illegal start of simple expression
  if (estFaceMur()){
  ^