maze.lessons.maze.pledge.PledgeMaze.scala.code
override def run() {
}
  
def keepHandOnWall():Int={
  var sommeAngle=0
  gauche()
  sommeAngle=++
  if (estFaceMur()){
    droite()
    if(estFaceMur()){
      droite()
    }else{
      avance()
    }
  }else{
    avance()
  }
}
